# julimin

./: CMakeLists.txt  NCO.h  arm_toolchain.cmake  kl26z.ld  kl26z_toolchain.cmake  load-tlc.sh  main.cpp
chips/cortexm/: memory_map.ld
chips/cortexm/kl26z/: .gitignore  MKL26Z4.h  chip_support.h  core.c  core.cpp  core.h  core_pins.h  pins_arduino.h  startup.c  startup.cpp  startup.h
chips/kl26z/: memory_map.ld
nos/: nos.h
nos/analog/: DAC.h  dac.h
nos/comm/: i2c.cpp  i2c.h  pin.cpp  pin.h  uart.cpp  uart.h
nos/container/: lockless_ring.h
nos/core/: chip.h  common.h  delay.cpp  delay.h  errors.h  led.h  memory_port.h  startup.h  sync.h  syscalls.c  syscalls.cpp  syscalls.h  types.h
nos/math/: fixed.h  fixed_class.h  fixed_func.cpp
nos/math/fixed_impl/: fixed_class.h  fixed_func.cpp  fixed_func.h
nos/time/: NCO.h  SystemTimer.cpp  SystemTimer.h  nco.h
nosem/: fixed.h  syscalls.c  syscalls.h
nosem/chips/kl26z/: core.c  core.h
tables/: voice1.incl  voices.cpp  voices.h
tools/: resample_akwf.py
